<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6AD2E1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_Logo"
        android:layout_width="253dp"
        android:layout_height="207dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="1dp"
        android:src="@drawable/educationlogo"/>

    <EditText
        android:id="@+id/et_MobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_Logo"
        android:textColor="@color/black"
        android:layout_marginLeft="25dp"
        android:maxLines="1"

        android:inputType="number"
        android:maxLength="10"
        android:background="@drawable/editformat"
        android:padding="16dp"
        android:layout_marginRight="25dp"
        android:hint="@string/mobile_number"/>

    <EditText
        android:id="@+id/et_LoginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_MobileNumber"
        android:layout_marginTop="18dp"
        android:padding="16dp"
        android:drawableStart="@drawable/ic_action_lock"
        android:textColor="@color/black"
        android:layout_marginLeft="25dp"
        android:inputType="number"
        android:maxLines="1"
        android:background="@drawable/editformat"
        android:maxLength="4"
        android:layout_marginRight="25dp"
        android:hint="@string/password_login"/>

    <Button
        android:id="@+id/btn_LoginPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_LoginPassword"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:background="@drawable/button_back"
        android:padding="9dp"
        android:text="@string/login_txt"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_forget_passwordPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_LoginPage"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txt_new_registrationPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_forget_passwordPage"
        android:layout_marginTop="270dp"
        android:gravity="center"
        android:text="@string/new_registration"
        android:textSize="18dp"/>

</RelativeLayout>