<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginforget.NewRegistration">

    <TextView
        android:id="@+id/txt_new_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CREATE ACCOUNT "
        android:textSize="35dp"
        android:padding="15dp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_MobileNumber_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_new_title"
        android:layout_marginLeft="25dp"
        android:maxLines="1"
        android:background="@drawable/editformat"
        android:inputType="text"
        android:padding="16dp"
        android:layout_marginRight="25dp"
        android:hint="@string/full_name_registration">
    </EditText>

    <EditText
        android:id="@+id/et_Username_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_MobileNumber_registration"
        android:layout_marginTop="18dp"
        android:padding="16dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/editformat"
        android:maxLines="1"
        android:layout_marginRight="25dp"
        android:hint="@string/Username_registration">
    </EditText>

    <EditText
        android:id="@+id/et_email_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_Username_registration"
        android:layout_marginTop="18dp"
        android:padding="16dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/editformat"
        android:maxLines="1"
        android:layout_marginRight="25dp"
        android:hint="@string/Email_registration">
    </EditText>

    <EditText
        android:id="@+id/et_phone_no_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email_registration"
        android:layout_marginTop="18dp"
        android:padding="16dp"
        android:layout_marginLeft="25dp"
        android:background="@drawable/editformat"
        android:maxLines="1"
        android:layout_marginRight="25dp"
        android:hint="@string/phone_registration">
    </EditText>

    <EditText
        android:id="@+id/et_password_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phone_no_registration"
        android:layout_marginTop="18dp"
        android:padding="16dp"
        android:layout_marginLeft="25dp"
        android:maxLines="1"
        android:background="@drawable/editformat"
        android:layout_marginRight="25dp"
        android:hint="@string/password_login">
    </EditText>

    <Button
        android:id="@+id/btn_next_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password_registration"
        android:layout_marginStart="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="45dp"
        android:background="@drawable/button_back"
        android:padding="9dp"
        android:text="NEXT"
        android:textColor="@color/black"
        android:textSize="23dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textColor="@color/black"
        android:layout_below="@id/btn_next_registration"
        android:gravity="center"
        android:textSize="23sp"/>


</RelativeLayout>